# mybuddy

./: AGENTS.md  Dockerfile  LICENSE  README.md  config.toml  docker-compose.yml  pyproject.toml
app/: main.py
app/agent/: graph.py
app/api/routes/: health.py
app/bootstrap/: feishu.py
app/core/: config.py  log.py
app/event/: bus.py  models.py
app/gateway/: dispatcher.py
app/router/: session_manager.py
app/services/: im_sender.py
tests/: lark_on_bot.py  lark_u_to_bot.py  test_graph.py
